# img2text

./: Cargo.toml  README.md  data.txt
src/: main.rs
